<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/seprator"
        android:id="@+id/seperate"
        />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/control_screen"
        android:textColor="@color/white"
        android:textSize="6pt"
        android:id="@+id/control_screen"
        android:background="@drawable/bottom_menu_user_bar_item_unselected"
        android:layout_weight="1"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/robot_cam_app_bottom_button_seperator"
        android:id="@+id/seperate1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/memory_and_presets"
        android:textColor="@color/white"
        android:textSize="6pt"
        android:id="@+id/memory_and_presets"
        android:background="@drawable/bottom_menu_user_bar_item_unselected"
        android:layout_weight="1"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/robot_cam_app_bottom_button_seperator"
        android:id="@+id/seperate2"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/information_menu"
        android:textColor="@color/white"
        android:textSize="6pt"
        android:id="@+id/information_menu"
        android:background="@drawable/bottom_menu_user_bar_item_unselected"
        android:layout_weight="1"
       />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/robot_cam_app_bottom_button_seperator"
        android:id="@+id/seperate3"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/options_menu"
        android:textColor="@color/white"
        android:textSize="6pt"
        android:id="@+id/option_menu"
        android:background="@drawable/bottom_menu_user_bar_item_unselected"
        android:layout_weight="1"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/robot_cam_app_bottom_button_seperator"
        android:id="@+id/seperate4"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="6pt"
        android:id="@+id/logout"
        android:background="@drawable/bottom_menu_user_bar_item_unselected"
        android:layout_weight="1"
       />

</LinearLayout>
</LinearLayout>
