<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"


    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        style="@style/user_section_screen_section_layout_top_bar"
        android:orientation="horizontal" >
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnautofocus"
            android:textOff=" "
            android:textOn=" "
            android:textColor="@color/white"
            android:background="@drawable/button_toggle_image"
            android:drawableLeft="@drawable/admin_on_off_control"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/auto_focus"
            android:text="@string/auto_focucs"
            style="@style/rcp_user_control_screen_toggle_textview"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/panel_lock1"
            android:text="@string/panel_lock"
            style="@style/rcp_user_control_screen_toggle_textview"

            />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn=""
            android:textOff=""
            android:id="@+id/panel_lock"
            android:textColor="@color/white"
            android:background="@drawable/button_toggle_image"
            android:drawableLeft="@drawable/admin_on_off_control"
            android:layout_gravity="right"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bottom_seperator"
        android:id="@+id/seperate"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4.2"
        style="@style/user_section_screen_section_layout_top_bar"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@id/seperate"
                style="@style/rcp_user_control_screen_textview_focus"
                android:text="@string/focus"
                android:id="@+id/tvFocus"

                />
            <com.emtcontrols.cam.widget.VerticalSeekBar
                android:id="@+id/sb_focus"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:progress="50"
                style="@style/user_control_screen_seekbar_focus"
                android:thumb="@drawable/rcp_control_focus_zoom_bar_point"
                android:progressDrawable="@drawable/admin_progress_bar"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:layout_gravity="center"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/CAMERALIST"
                android:id="@+id/tvCameraList"
                style="@style/rcp_user_control_screen_textview_cameralist"
                />
            <GridView
                android:id="@+id/gv_Camera_userlist"
                android:layout_width="match_parent"
                android:numColumns="4"
                style="@style/user_control_screen_gridview_camera"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/user_control_screen_section_layout_mode_buttons"
                android:orientation="horizontal" >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_control"
                    style="@style/user_control_screen_mode_buttons"
                    android:layout_marginLeft="25dp"
                    android:id="@+id/btn_camera_control"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_elevation"
                    android:text="@string/elevation_control"
                    style="@style/user_control_screen_mode_buttons"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_predestal"
                    android:text="@string/predestal_control"
                    style="@style/user_control_screen_mode_buttons"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/MODE"
                android:id="@+id/tvMode"
                style="@style/rcp_user_control_screen_section_textview_mode"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/JOYSTICK"
                style="@style/rcp_user_control_screen_section_textview_joystick"
                android:id="@+id/tvJoyStick"
                />
            <RelativeLayout
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:id="@+id/rel"
                >



                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rcp_control_joystick"
                    android:id="@+id/circleView"
                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rcp_control_joystick_button"
                    android:id="@+id/circleView1"
                    style="@style/rcp_user_control_screen_joystick_second_circle"
                    />
                <ImageButton
                    style="@style/user_control_screen_joystick_button_up"
                    android:id="@+id/btnUP"
                    android:background="@drawable/admin_rcp_control_joystick_arrow_up"
                    android:layout_alignTop="@+id/circleView1"

                    android:layout_centerHorizontal="true"
                    />
                <ImageButton
                    style="@style/user_control_screen_joystick_button_down"
                    android:id="@+id/btnDOWN"
                    android:background="@drawable/admin_rcp_control_joystick_arrow_down"
                    android:layout_alignBottom="@+id/circleView1"
                    android:layout_centerHorizontal="true" />

                <ImageButton
                    style="@style/user_control_screen_joystick_button_left"
                    android:id="@+id/btnLEFT"
                    android:background="@drawable/admin_rcp_control_joystick_arrow_left"

                    android:layout_centerVertical="true"

                    android:layout_alignLeft="@+id/circleView1"

                    />
                <ImageButton
                    style="@style/user_control_screen_joystick_button_right"
                    android:id="@+id/btnRIGHT"
                    android:background="@drawable/admin_rcp_control_joystick_arrow_right"
                    android:layout_centerVertical="true"
                    android:layout_alignRight="@+id/circleView1"
                    android:layout_alignEnd="@+id/circleView1" />

            </RelativeLayout>
            <com.emtcontrols.cam.widget.CustomSeekBar

                android:thumb="@drawable/rcp_control_sensitivity_bar_point"
                android:id="@+id/sb_sensitivity"
                android:progress="50"
                style="@style/user_control_screen_seekbar_sensitivity"
                android:progressDrawable="@drawable/admin_progress_bar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/rcp_user_control_screen_seekbar_sensitivity_textview"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/SENSTIVITY"
                android:id="@+id/tvSenstivity"
                android:layout_below="@+id/sb_zoom"
                android:layout_toRightOf="@id/tvMode" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:layout_gravity="center"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="ZOOM IN/OUT"
                android:id="@+id/tvZoom"
                style="@style/rcp_user_control_screen_textview_zoom"
                />
            <com.emtcontrols.cam.widget.VerticalSeekBar
                android:id="@+id/sb_zoom"
                android:progress="50"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                style="@style/user_control_screen_seekbar_focus"
                android:thumb="@drawable/rcp_control_focus_zoom_bar_point"
                android:progressDrawable="@drawable/admin_progress_bar"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>



